Fix issue with homepage image being cropped off on mobile phones

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -595,12 +595,13 @@ button {
   }
 }
 
-@media (min-width:320px)  {
+@media (min-width:320px) and (max-width:480px)  {
   /* smartphones, iPhone, portrait 480x320 phones */
   .dark-overlay {
     background-color: rgba(0, 0, 0, 0.7);
     position: relative;
-    top: 6.5em;
+    top: 0;
+    margin-top: 6.5em;
     left: 0;
     width: 100%;
     height: 100%;
